--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 body {
     margin: 0;
     font-family: "Open Sans", sans-serif;
+    background: linear-gradient(180deg, rgba(227, 255, 248, 0) 82.08%, rgba(227, 255, 248, 0.38) 100%);
+    min-height: 100vh;
 }
 
 .page {
     width: 1000px;
-    margin: 65px auto 0;
+    margin: 0 auto;
+    padding-top: 65px;
 }
 
 nav {
@@ -63,8 +66,22 @@ section p {
 }
 
 button {
+    color: white;
     text-transform: uppercase;
     font-family: "Open Sans", sans-serif;
+    background: #69B99D;
+    border: 0;
+    padding: 14px 32px 15px;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    cursor: pointer;
+}
+
+button:hover {
+    background: #4ea788;
 }
 
 footer {
@@ -76,4 +93,10 @@ footer {
 
 footer a {
     font-weight: bold;
+}
+
+#balls {
+    position: fixed;
+    bottom: 0;
+    right: 0;
 }
