--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: "Open Sans", sans-serif;
-    background: linear-gradient(180deg, rgba(227, 255, 248, 0) 82.08%, rgba(227, 255, 248, 0.38) 100%);
+    background: linear-gradient(135deg, rgba(227, 255, 248, 0) 80%, rgba(227, 255, 248, 1) 100%);
     min-height: 100vh;
 }
 
@@ -9,6 +9,10 @@ body {
     width: 1000px;
     margin: 0 auto;
     padding-top: 65px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: calc(100vh - 65px);
 }
 
 nav {
@@ -31,8 +35,13 @@ a {
     text-decoration: none;
 }
 
+ul li a {
+    opacity: 0.5;
+}
+
 ul li a:hover {
     font-weight: bold;
+    opacity: 1;
 }
 
 h1, ul {
